# huawei-obs-utils

./: .bandit  .flake8  .gitignore  GUIA_OPERADOR_WINDOWS.md  GUIA_SUPERADMIN_WINDOWS.md  INICIO_RAPIDO_WINDOWS.md  INSTALACION_SEGURA.md  LICENSE  NOTICE  README.md  README_ES.md  SECURITY.md  SECURITY_LEVELS.md  check_before_push.sh  config.py  example_secure_usage.py  example_security_levels.py  install_secure_linux.sh  install_secure_windows.bat  logger.py  migrate.sh  obs_config.json.sample  obs_manager.py  obs_manager_secure.py  obs_utils.py  obs_utils_improved.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.ps1  run.sh  security.py  security_levels.py  setup.bat  setup.ps1  setup.sh  setup_secure.bat  setup_secure.sh  setup_secure_config.py  (+4 more)
.github/: README.md
.github/workflows/: basic-tests.yml  ci-cd.yml  cross-platform.yml  security.yml
.obsidian/: workspace.json
docs/en/: API.md  CONFIGURATION.md  EXAMPLES.md  INSTALLATION.md  QUICK_GUIDE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  WINDOWS_GUIDE.md
docs/es/: API.md  CONFIGURACION.md  EJEMPLOS.md  GUIA_RAPIDA.md  GUIA_WINDOWS.md  INSTALACION.md  README.md  SEGURIDAD.md  SOLUCION_PROBLEMAS.md
tests/: __init__.py  test_advanced_security.py  test_basic.py  test_comprehensive.py  test_obs_specific.py  test_report_generator.py
