[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "build/*", "dist/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "security: Security tests",
    "slow: Slow tests",
    "windows: Windows-specific tests",
    "linux: Linux-specific tests",
    "macos: macOS-specific tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "obs-utils"
version = "2.0.0"
description = "Secure utilities for Huawei Cloud Object Storage Service"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CCVASS", email = "contact@ccvass.com"}
]
maintainers = [
    {name = "CCVASS", email = "contact@ccvass.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography"
]
requires-python = ">=3.9"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1", 
    "cryptography>=3.4.8",
    "esdk-obs-python>=3.24.12",
    "idna>=3.10",
    "pycryptodome>=3.21.0",
    "requests>=2.32.3",
    "urllib3>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0"
]

[project.scripts]
obs-utils = "obs_utils_improved:main"

[project.urls]
Homepage = "https://github.com/ccvass/obs-utils"
Documentation = "https://github.com/ccvass/obs-utils/blob/main/README.md"
Repository = "https://github.com/ccvass/obs-utils.git"
"Bug Tracker" = "https://github.com/ccvass/obs-utils/issues"
"Contact" = "mailto:contact@ccvass.com"
